gen/dfareporting/v3.3/cargo-errors.log
    Checking google-dfareporting3d3 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/dfareporting/v3.3/lib)
error[E0412]: cannot find type `ListTypeItems` in module `crate::resources::ads::params`
     --> dfareporting/v3.3/lib/src/lib.rs:22361:63
      |
22361 |             r#type: Option<Vec<crate::resources::ads::params::ListTypeItems>>,
      |                                                               ^^^^^^^^^^^^^ not found in `crate::resources::ads::params`

error[E0412]: cannot find type `ListTypeItems` in module `crate::resources::ads::params`
     --> dfareporting/v3.3/lib/src/lib.rs:22462:69
      |
22462 |                 value: impl Into<Vec<crate::resources::ads::params::ListTypeItems>>,
      |                                                                     ^^^^^^^^^^^^^ not found in `crate::resources::ads::params`

error[E0412]: cannot find type `ListTypesItems` in module `crate::resources::creatives::params`
     --> dfareporting/v3.3/lib/src/lib.rs:36014:68
      |
36014 |             types: Option<Vec<crate::resources::creatives::params::ListTypesItems>>,
      |                                                                    ^^^^^^^^^^^^^^ not found in `crate::resources::creatives::params`

error[E0412]: cannot find type `ListTypesItems` in module `crate::resources::creatives::params`
     --> dfareporting/v3.3/lib/src/lib.rs:36108:75
      |
36108 |                 value: impl Into<Vec<crate::resources::creatives::params::ListTypesItems>>,
      |                                                                           ^^^^^^^^^^^^^^ not found in `crate::resources::creatives::params`

error[E0412]: cannot find type `ListEventTagTypesItems` in module `crate::resources::event_tags::params`
     --> dfareporting/v3.3/lib/src/lib.rs:38989:66
      |
38989 |                 Option<Vec<crate::resources::event_tags::params::ListEventTagTypesItems>>,
      |                                                                  ^^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::event_tags::params`

error[E0412]: cannot find type `ListEventTagTypesItems` in module `crate::resources::event_tags::params`
     --> dfareporting/v3.3/lib/src/lib.rs:39031:76
      |
39031 |                 value: impl Into<Vec<crate::resources::event_tags::params::ListEventTagTypesItems>>,
      |                                                                            ^^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::event_tags::params`

error[E0412]: cannot find type `ListDirectoriesItems` in module `crate::resources::mobile_apps::params`
     --> dfareporting/v3.3/lib/src/lib.rs:44763:76
      |
44763 |             directories: Option<Vec<crate::resources::mobile_apps::params::ListDirectoriesItems>>,
      |                                                                            ^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::mobile_apps::params`

error[E0412]: cannot find type `ListDirectoriesItems` in module `crate::resources::mobile_apps::params`
     --> dfareporting/v3.3/lib/src/lib.rs:44780:77
      |
44780 |                 value: impl Into<Vec<crate::resources::mobile_apps::params::ListDirectoriesItems>>,
      |                                                                             ^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::mobile_apps::params`

error[E0412]: cannot find type `ListPricingTypesItems` in module `crate::resources::placement_groups::params`
     --> dfareporting/v3.3/lib/src/lib.rs:47897:72
      |
47897 |                 Option<Vec<crate::resources::placement_groups::params::ListPricingTypesItems>>,
      |                                                                        ^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::placement_groups::params`

error[E0412]: cannot find type `ListPricingTypesItems` in module `crate::resources::placement_groups::params`
     --> dfareporting/v3.3/lib/src/lib.rs:47987:82
      |
47987 |                 value: impl Into<Vec<crate::resources::placement_groups::params::ListPricingTypesItems>>,
      |                                                                                  ^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::placement_groups::params`

error[E0412]: cannot find type `GeneratetagsTagFormatsItems` in module `crate::resources::placements::params`
     --> dfareporting/v3.3/lib/src/lib.rs:50070:66
      |
50070 |                 Option<Vec<crate::resources::placements::params::GeneratetagsTagFormatsItems>>,
      |                                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::placements::params`

error[E0412]: cannot find type `GeneratetagsTagFormatsItems` in module `crate::resources::placements::params`
     --> dfareporting/v3.3/lib/src/lib.rs:50093:76
      |
50093 |                 value: impl Into<Vec<crate::resources::placements::params::GeneratetagsTagFormatsItems>>,
      |                                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::placements::params`

error[E0412]: cannot find type `ListCompatibilitiesItems` in module `crate::resources::placements::params`
     --> dfareporting/v3.3/lib/src/lib.rs:50526:66
      |
50526 |                 Option<Vec<crate::resources::placements::params::ListCompatibilitiesItems>>,
      |                                                                  ^^^^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::placements::params`

error[E0412]: cannot find type `ListPricingTypesItems` in module `crate::resources::placements::params`
     --> dfareporting/v3.3/lib/src/lib.rs:50539:77
      |
50539 |             pricing_types: Option<Vec<crate::resources::placements::params::ListPricingTypesItems>>,
      |                                                                             ^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::placements::params`

error[E0412]: cannot find type `ListCompatibilitiesItems` in module `crate::resources::placements::params`
     --> dfareporting/v3.3/lib/src/lib.rs:50572:76
      |
50572 |                 value: impl Into<Vec<crate::resources::placements::params::ListCompatibilitiesItems>>,
      |                                                                            ^^^^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::placements::params`

error[E0412]: cannot find type `ListPricingTypesItems` in module `crate::resources::placements::params`
     --> dfareporting/v3.3/lib/src/lib.rs:50643:76
      |
50643 |                 value: impl Into<Vec<crate::resources::placements::params::ListPricingTypesItems>>,
      |                                                                            ^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::placements::params`

error: aborting due to 16 previous errors

For more information about this error, try `rustc --explain E0412`.
error: Could not compile `google-dfareporting3d3`.

To learn more, run the command again with --verbose.
